k8s/apps/gitea/00-default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: gitea-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
