k8s/apps/gitea/02-allow-ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-external
  namespace: gitea-system
spec:
    podSelector:
      matchLabels:
        app.kubernetes.io/name: gitea
        app.kubernetes.io/instance: gitea
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP\n      port: 3000\n    - protocol: TCP\n      port: 22\n
